--- a/.github/workflows/pyspark.yml
+++ b/.github/workflows/pyspark.yml
@@ -23,6 +23,7 @@ on:
   push:
     branches:
       - main
+      - ldbc-snb-datagen
     paths:
       - 'maven-projects/spark/**'
       - 'pyspark/**'
