--- a/.github/workflows/spark.yaml
+++ b/.github/workflows/spark.yaml
@@ -23,12 +23,14 @@ on:
   push:
     branches:
       - main
+      - ldbc-snb-datagen
     paths:
       - 'maven-projects/spark/**'
       - '.github/workflows/spark.yaml'
   pull_request:
     branches:
       - main
+      - ldbc-snb-datagen
     paths:
       - 'maven-projects/spark/**'
       - '.github/workflows/spark.yaml'
